<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Notes_Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:onClick="toNotes"
        app:layout_constraintBottom_toBottomOf="@+id/Todo_Button"
        app:layout_constraintEnd_toStartOf="@+id/Reminders_Button"
        app:layout_constraintStart_toEndOf="@+id/Todo_Button" />

    <Button
        android:id="@+id/Todo_Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:onClick="toTodo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Reminders_Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/reminders"
        android:onClick="toReminders"
        app:layout_constraintBottom_toBottomOf="@+id/Todo_Button"
        app:layout_constraintEnd_toEndOf="parent" />

    <CalendarView
        android:id="@+id/calendarView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/select_a_day_for_tracker_view"
        app:layout_constraintBottom_toBottomOf="@+id/calendarView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/recent_scrollview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/Notes_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <HorizontalScrollView
            android:id="@+id/hscrll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">-->

                <TableLayout
                    android:id="@+id/recent_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="false"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>


    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Today's Entries"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPlanner" />

    <Button
        android:id="@+id/addPlanner"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/planner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView4" />

    <Button
        android:id="@+id/addHealth"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/health"
        app:layout_constraintEnd_toStartOf="@+id/addExercise"
        app:layout_constraintStart_toEndOf="@+id/addPlanner"
        app:layout_constraintTop_toTopOf="@+id/addPlanner" />

    <Button
        android:id="@+id/addExercise"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addPlanner" />

    <View
        android:id="@+id/recent_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/recent_scrollview"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/recent_divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recent_scrollview" />

</androidx.constraintlayout.widget.ConstraintLayout>